tests/integration/snapshots/integration__conformance__n_number_.2e-3.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
command: "jjp"
status: 1
success: false
stdout ---
[.2e-3]
stderr ---
error: unexpected character `.`. expected start of a json value
 --> stdin:1:2
  |
1 | [.2e-3]
  |  ^
